pretrained model works

--- a/monkeyRecognition.ipynb
+++ b/monkeyRecognition.ipynb
@@ -2,20 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Anca\\Anaconda3\\envs\\tensorflow-cpu\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The watermark extension is already loaded. To reload it, use:\n",
-      "  %reload_ext watermark\n",
       "tensorflow 1.7.0\n",
       "skimage 0.13.1\n",
       "matplotlib 2.2.2\n",
       "numpy 1.14.2\n",
       "random n\u0007\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -35,11 +48,11 @@
     "from skimage import transform\n",
     "from skimage import data\n",
     "\n",
-    "### CPU ONLY SESSION\n",
-    "###################################################################\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
-    "###################################################################\n",
+    "# ### CPU ONLY SESSION\n",
+    "# ###################################################################\n",
+    "# os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\"\n",
+    "# ###################################################################\n",
     "\n",
     "import tensorflow as tf\n",
     "from keras.preprocessing.image import load_img, img_to_array, array_to_img\n",
@@ -73,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +228,7 @@
        "9           132                 26  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -312,30 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_convnet():\n",
-    "    network = Sequential()\n",
-    "    network.add(Conv2D(32, (3, 3), activation=\"relu\", input_shape=(150, 150, 3)))\n",
-    "    network.add(MaxPooling2D((2, 2)))\n",
-    "    network.add(Conv2D(64, (3, 3), activation=\"relu\"))\n",
-    "    network.add(MaxPooling2D((2, 2)))\n",
-    "    network.add(Conv2D(128, (3, 3), activation=\"relu\"))\n",
-    "    network.add(MaxPooling2D((2, 2)))\n",
-    "    network.add(Conv2D(128, (3, 3), activation=\"relu\"))\n",
-    "    network.add(MaxPooling2D((2, 2)))\n",
-    "    network.add(Flatten())\n",
-    "    network.add(Dense(512, activation=\"relu\"))\n",
-    "    network.add(Dense(10, activation=\"softmax\"))\n",
-    "    network.compile(optimizer=RMSprop(lr=0.0003), loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
-    "    return network"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -375,6 +365,22 @@
     }
    ],
    "source": [
+    "def build_convnet():\n",
+    "    network = Sequential()\n",
+    "    network.add(Conv2D(32, (3, 3), activation=\"relu\", input_shape=(150, 150, 3)))\n",
+    "    network.add(MaxPooling2D((2, 2)))\n",
+    "    network.add(Conv2D(64, (3, 3), activation=\"relu\"))\n",
+    "    network.add(MaxPooling2D((2, 2)))\n",
+    "    network.add(Conv2D(128, (3, 3), activation=\"relu\"))\n",
+    "    network.add(MaxPooling2D((2, 2)))\n",
+    "    network.add(Conv2D(128, (3, 3), activation=\"relu\"))\n",
+    "    network.add(MaxPooling2D((2, 2)))\n",
+    "    network.add(Flatten())\n",
+    "    network.add(Dense(512, activation=\"relu\"))\n",
+    "    network.add(Dense(10, activation=\"softmax\"))\n",
+    "    network.compile(optimizer=RMSprop(lr=0.0003), loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+    "    return network\n",
+    "\n",
     "network = build_convnet()\n",
     "network.summary()"
    ]
@@ -415,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -861,9 +867,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1097 images belonging to 10 classes.\n",
+      "Found 272 images belonging to 10 classes.\n",
+      "Epoch 1/1\n",
+      "54/54 [==============================] - ETA: 33:03 - loss: 2.7699 - acc: 0.10 - ETA: 27:46 - loss: 2.7083 - acc: 0.10 - ETA: 24:52 - loss: 2.5345 - acc: 0.15 - ETA: 23:06 - loss: 2.5070 - acc: 0.11 - ETA: 21:45 - loss: 2.4705 - acc: 0.12 - ETA: 21:25 - loss: 2.4216 - acc: 0.14 - ETA: 20:40 - loss: 2.3551 - acc: 0.13 - ETA: 19:57 - loss: 2.3446 - acc: 0.14 - ETA: 19:26 - loss: 2.3193 - acc: 0.16 - ETA: 18:53 - loss: 2.3112 - acc: 0.16 - ETA: 18:37 - loss: 2.2979 - acc: 0.15 - ETA: 18:12 - loss: 2.2706 - acc: 0.18 - ETA: 17:45 - loss: 2.2592 - acc: 0.20 - ETA: 17:21 - loss: 2.2435 - acc: 0.20 - ETA: 16:52 - loss: 2.2208 - acc: 0.21 - ETA: 16:25 - loss: 2.1911 - acc: 0.21 - ETA: 15:58 - loss: 2.1753 - acc: 0.23 - ETA: 15:31 - loss: 2.1378 - acc: 0.24 - ETA: 15:08 - loss: 2.1288 - acc: 0.25 - ETA: 14:43 - loss: 2.1184 - acc: 0.25 - ETA: 14:39 - loss: 2.0869 - acc: 0.26 - ETA: 15:03 - loss: 2.0585 - acc: 0.27 - ETA: 14:39 - loss: 2.0434 - acc: 0.28 - ETA: 14:10 - loss: 2.0298 - acc: 0.28 - ETA: 13:41 - loss: 2.0076 - acc: 0.29 - ETA: 13:11 - loss: 2.0053 - acc: 0.29 - ETA: 12:40 - loss: 1.9829 - acc: 0.31 - ETA: 12:10 - loss: 1.9710 - acc: 0.32 - ETA: 11:48 - loss: 1.9505 - acc: 0.32 - ETA: 11:37 - loss: 1.9365 - acc: 0.33 - ETA: 11:10 - loss: 1.9217 - acc: 0.35 - ETA: 10:40 - loss: 1.9111 - acc: 0.35 - ETA: 10:11 - loss: 1.8953 - acc: 0.35 - ETA: 9:49 - loss: 1.8936 - acc: 0.3529 - ETA: 9:18 - loss: 1.8762 - acc: 0.358 - ETA: 8:45 - loss: 1.8618 - acc: 0.370 - ETA: 8:20 - loss: 1.8434 - acc: 0.381 - ETA: 7:54 - loss: 1.8273 - acc: 0.388 - ETA: 7:27 - loss: 1.8208 - acc: 0.393 - ETA: 7:00 - loss: 1.8087 - acc: 0.398 - ETA: 6:32 - loss: 1.7936 - acc: 0.406 - ETA: 6:01 - loss: 1.7771 - acc: 0.413 - ETA: 5:30 - loss: 1.7612 - acc: 0.420 - ETA: 4:59 - loss: 1.7499 - acc: 0.425 - ETA: 4:29 - loss: 1.7359 - acc: 0.433 - ETA: 3:58 - loss: 1.7225 - acc: 0.440 - ETA: 3:28 - loss: 1.7070 - acc: 0.448 - ETA: 2:57 - loss: 1.6913 - acc: 0.457 - ETA: 2:27 - loss: 1.6783 - acc: 0.463 - ETA: 1:57 - loss: 1.6694 - acc: 0.468 - ETA: 1:28 - loss: 1.6581 - acc: 0.472 - ETA: 58s - loss: 1.6428 - acc: 0.478 - ETA: 29s - loss: 1.6359 - acc: 0.48 - 2108s 39s/step - loss: 1.6205 - acc: 0.4854 - val_loss: 1.1393 - val_acc: 0.6025\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1ace4b06048>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# take pretrained network's weights without its last layer's weights (notop)\n",
     "resnet_weights_path = '../pretrainedWeights/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5'\n",
